my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EPRAGMA/EPRAGMA.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EPRAGMA.dml:13: error EPRAGMA: Unknown pragma: MYVERYCOOLPRAGMA
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EPRAGMA.dml:16: error EPRAGMA: Unknown pragma: 😀
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EPRAGMA.dml:19: error EPRAGMA: Unknown pragma: MYVERYCOOLPRAGMA
